--- a/introducao.tex
+++ b/introducao.tex
@@ -10,7 +10,7 @@ informações de diversas espécies que trafegam por entre elas e seus usuários
 Numa proposição inicial, este trabalho define como \textit{Malware} todo tipo de
 programa que seja capaz de alterar o comportamento de um software num
 dispositivo conectado a uma rede qualquer, feito com o desejo de vender
-informações de usuários, causar desordem, roubar credenciais, enviar spams,
+informações de usuários, causar desordem, roubar credenciais, enviar \textit{spams},
 alimentar motores de otimização de busca (SEO) com informações falsas sobre
 visitas a páginas da Web ou ainda de chantagear usuários, como foi o caso do
 \textit{malware} japonês denominado \textit{Kenzero}, que publicava históricos de navegação
@@ -21,7 +21,7 @@ SAWLE et al. (\citeyear{sawle14}).
 De acordo com IDIKA (\citeyear{idika07}), pode-se classificar os tipos de
 métodos de detecção de maneira mais rudimentar em duas categorias: detecção
 baseada em anomalia e detecção baseada em assinatura. A detecção por anomalia
-é uma técnica que consiste em treinar um algoritmo de deteção para que ele
+é uma técnica que consiste em treinar um algoritmo de detecção para que ele
 “saiba” o que constitui o comportamento normal de um programa, para que ele
 possa decidir sobre a periculosidade dos programas a serem inspecionados. Essa
 mesma abordagem também dá origem a uma técnica muito similar conhecida como
@@ -41,7 +41,7 @@ ele já foi executado. As técnicas híbridas são simplesmente combinações de
 duas anteriores, juntando informações estáticas e dinâmicas para que se
 conclua um parecer sobre a maliciosidade dos códigos analisados.
 
-Dessa maneira, é possível exemplificar as técnicas de deteção com a figura:
+Dessa maneira, é possível exemplificar as técnicas de detecção com a figura 1:
 
 \begin{figure}[H]
 \caption{\small Classificação das técnicas de detecção de \textit{Malware}}
