--- a/projeto.tex
+++ b/projeto.tex
@@ -441,7 +441,7 @@ malware signature testing and file verification.
 \input{fundamentacao.tex}
 \input{metodologia.tex}
 \input{desenvolvimento.tex}
-\input{cronograma.tex}
+% \input{cronograma.tex}
 \input{conclusao.tex}
 
 % ---
