--- a/references.bib
+++ b/references.bib
@@ -143,3 +143,12 @@
   url = {https://github.com/sec51},
   year = {2014}
 }
+
+@misc{sun2012automated,
+  title={Automated malware signature generation},
+  author={Sun, Ning and Winkler, Patrick and Chu, Chengyun and Jia, Hong and Geffner, Jason and Lee, Tony and Mody, Jigar and Swiderski, Frank},
+  year={2012},
+  month=jun # "~12",
+  publisher={Google Patents},
+  note={US Patent 8,201,244}
+}
