--- a/metodologia.tex
+++ b/metodologia.tex
@@ -2,10 +2,7 @@
 \chapter{METODOLOGIA}
 \label{c.metodologia}
 
-\section{Métodos e Planejamento}
-\label{s.metodoseplan}
-
-Planeja-se dividir o estudo de acordo com as seguintes etapas:
+O estudo foi segmentado de acordo com as seguintes etapas:
 
 \begin{itemize}
 	\item[-] Levantamento bibliográfico
@@ -13,16 +10,16 @@ Planeja-se dividir o estudo de acordo com as seguintes etapas:
 	\item[-] Implementação Computacional
 	\item[-] Análise dos resultados e conclusão da monografia.
 \end{itemize}
-A confecção da monografia vai ocorrer juntamente com o andamento das demais
-etapas definidas durante toda a extensão do projeto. A ideia é utilizar
+A confecção da monografia ocorreu juntamente com o andamento das demais
+etapas definidas durante toda a extensão do projeto. A ideia foi utilizar
 máquinas virtuais e emuladores para implementar em caráter de teste os
 algoritmos de detecção baseados em assinatura sobre um conjunto de programas
 contendo alguns programas já infectados com amostras de \textit{malware} diversas para
 observar, em termos gerais, a eficiência do tempo de execução dos algoritmos e
-suas respectivas taxas de sucesso. O ambiente pode ser montado em qualquer
+suas respectivas taxas de sucesso. Como o ambiente pode ser montado em qualquer
 máquina que suporte a plataforma Windows e emulador Android, então não há
 necessidade de que se reserve material da UNESP para uso exclusivo do projeto.
-A figura a seguir ilustra o planejamento do projeto.
+A figura 5 ilustra o planejamento do projeto:
 \begin{figure}[H]
 \caption{\small Estrutura do projeto}
 \centering
@@ -30,6 +27,22 @@ A figura a seguir ilustra o planejamento do projeto.
 \label{f.estrutura_projeto}
 \legend{\small Fonte: Elaborada pelo autor.(2016)}
 \end{figure}
+
+O fluxo de desenvolvimento do projeto consiste na aplicação de um índice de
+regras de detecção do Yara, construído a partir da conversão de arquivos
+contendo bases de assinaturas do Clam AV para arquivos contendo regras de
+detecção do Yara, sobre o conjunto de amostras vivas de \textit{malware} obtidas
+nos repositórios citados na seção do desenvolvimento do projeto. As varreduras
+são feitas via linha de comando e para agilizá-las, além do uso de índices para
+agrupar regras, também pode-se automatizar as varreduras em grupos maiores de
+arquivos aplicando um pouco de \textit{shell script}. Os resultados das
+varreduras serão armazenados em arquivos de texto que irão conter todos os
+atributos analisados a cada arquivo a respeito de uma determinada regra. Vamos
+explicar com um pouco mais de detalhe como ficam caracterizadas as infecções nos
+\textit{logs} de resultados, com casos de teste envolvendo expectativas de
+resultados positivos, falso-positivos e negativos. Ao final da seção de
+desenvolvimento, também foi explicada a ideia da aplicação \textit{web} para
+varreduras remotas e manipulação de regras do Yara.
 
 \section{Materiais Utilizados}
 \label{l.material}
@@ -46,7 +59,7 @@ Yara é uma ferramenta de código aberto recentemente desenvolvida, cujo intuito
 auxiliar desenvolvedores a identificar e classificar amostras de
 \textit{malware}. Ele é construído em C, porém, com o auxílio de algumas
 bibliotecas, há a possibilidade de incorporá-lo em scripts de outras linguagens,
-como Python.Segundo ALVAREZ (2014), O funcionamento do Yara consiste em comparar
+como Python. Segundo ALVAREZ (2014), o funcionamento do Yara consiste em comparar
 regras criadas pelo desenvolvedor que descrevem famílias de \textit{malware},
 com o código de executáveis quaisquer, ou também de arquivos comprimidos em
 alguns formatos comuns. As regras podem variar bastante em nível de complexidade
@@ -71,7 +84,7 @@ entre eles:
 	\item[-] We Watch Your Website
 \end{itemize}
 
-O Yara será utilizado no presente trabalho de conclusão de curso como meio de
+O Yara foi utilizado no presente trabalho de conclusão de curso como meio de
 aplicação dos algoritmos de assinatura nos programas que serão examinados. Com
 o auxílio de scripts desenvolvidos em Python, simularemos uma varredura nesse
 conjunto de programas aplicando regras obtidas através de sites como o
@@ -96,9 +109,9 @@ construção dessas regras, que vão determinar se o arquivo corresponde ou não
 família definida nas regras de detecção. Para exemplificar mais claramente a
 construção e o funcionamento das regras, seguem alguns exemplos de código
 obtido do repositório do projeto \href{yararules.org}{Yara Rules} no
-\href{github.com}{Github}.
+\href{github.com}{Github}, ilustrados nas figuras 6 e 7.
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figs/zeus}
 	\caption{Regra de detecção para o \textit{malware} ``Zeus''.}
@@ -106,17 +119,33 @@ obtido do repositório do projeto \href{yararules.org}{Yara Rules} no
 	\legend{Fonte: elaborada pelo autor}
 \end{figure}
 
-Na imagem acima temos exemplo de uma descrição para o \textit{malware} chamado ``Zeus''
-(também conhecido como ``RPG'', ``ZBot'', ``Infostealer'', entre outros), que é membro da
-família dos \textit{Trojans}. Segundo informações da \href{www.wiki-security.com}{Wiki Security}\citeyear{wikisecurity} os danos causados por ele incluem roubo de informações pessoais como senhas de email e de bancos, para posteriormente efetuarem-se transferências para ``contas-mula'' que lavariam o dinheiro das vítimas até
-que ele chegasse aos atacantes. O \textit{malware} foi escrito majoritariamente em C
-com alguns pequenos trechos em php, e seu código fonte, vazado em 2011, pode
-ser encontrado neste outro repositório público do \href{https://github.com/Visgean/Zeus}{Github}.
-Como podemos observar, a regra escrita para marcar o trojan verifica os dois primeiros \textit{bytes}, \textit{strings} e o protocolo utilizados por uma determinada versão do ``Zeus'' e fica ativa quando a primeira e uma das outras duas condições são satisfeitas.
+Na imagem acima temos exemplo de uma descrição para o \textit{malware} chamado
+``Zeus'' (também conhecido como ``RPG'', ``ZBot'', ``Infostealer'', entre
+outros), que é membro da família dos \textit{Trojans}. Segundo informações da
+\href{www.wiki-security.com}{Wiki Security}\citeyear{wikisecurity} os danos
+causados por ele incluem roubo de informações pessoais como senhas de email e de
+bancos, para posteriormente efetuarem-se transferências para ``contas-mula'' que
+lavariam o dinheiro das vítimas até que ele chegasse aos atacantes. O
+\textit{malware} foi escrito majoritariamente em C com alguns pequenos trechos
+em php, e seu código fonte, vazado em 2011, pode ser encontrado neste outro
+repositório público do \href{https://github.com/Visgean/Zeus}{Github}. Como
+podemos observar, a regra escrita para marcar o trojan verifica os dois
+primeiros \textit{bytes}, \textit{strings} e o protocolo utilizados por uma
+determinada versão do ``Zeus'' e fica ativa quando a primeira e uma das outras
+duas condições são satisfeitas.
 
-Outro exemplo de regra de detecção envolvendo parâmetros semelhantes aos anteriores é a que descreve o \textit{malware} ``Lenovo Superfish''\citeyear{lenovosuperfish}; na verdade esse é o nome de um serviço que vinha embutido em algumas séries de equipamentos lançados pela fabricante Lenovo entre 2014 e 2015, cuja meta era ajudar consumidores a encontrar produtos similares aos que eles buscavam pela web. Esse serviço possuía uma vulnerabilidade de protocolos que foi explorada na criação do \textit{malware} homônimo. No caso, as características que estão sendo mapeadas são novamente os dois primeiros \textit{bytes} do programa, porém com strings em formato e encodificações diferentes das encontradas na regra anterior, como segue na figura:
+Outro exemplo de regra de detecção envolvendo parâmetros semelhantes aos
+anteriores é a que descreve o \textit{malware} ``Lenovo
+Superfish''\citeyear{lenovosuperfish}; na verdade esse é o nome de um serviço
+que vinha embutido em algumas séries de equipamentos lançados pela fabricante
+Lenovo entre 2014 e 2015, cuja meta era ajudar consumidores a encontrar produtos
+similares aos que eles buscavam pela web. Esse serviço possuía uma
+vulnerabilidade de protocolos que foi explorada na criação do \textit{malware}
+homônimo. No caso, as características que estão sendo mapeadas são novamente os
+dois primeiros \textit{bytes} do programa, porém com strings em formato e
+encodificações diferentes das encontradas na regra anterior, como segue:
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figs/superfish}
 	\caption{Regra de detecção do ``Superfish''}
@@ -202,26 +231,6 @@ instalação, e tais dados não são comercializados com terceiros, ou monetizad
 de alguma outra forma, todas as análises feitas por eles são apenas um serviço
 gratuito prestado à comunidade \textit{open source}. No projeto que foi
 desenvolvido, utilizaram-se bases de dados com assinaturas utilizadas pelo Clam
-AV em suas próprias varreduras em \textit{scripts} que as reconhecem, descomprimem e
-convertem para regras do Yara, que por sua vez podem ser editadas ou testadas
-isoladamente a critério do desenvolvedor.
-
-
-\subsection{Resumo da metodologia do projeto}
-\label{ss.resumo}
-
-O fluxo de desenvolvimento do projeto consiste na aplicação de um índice de
-regras de detecção do Yara, construído a partir da conversão de arquivos
-contendo bases de assinaturas do Clam AV para arquivos contendo regras de
-detecção do Yara, sobre o conjunto de amostras vivas de \textit{malware} obtidas
-nos repositórios citados na seção do desenvolvimento do projeto. As varreduras
-são feitas via linha de comando e para agilizá-las, além do uso de índices para
-agrupar regras, também pode-se automatizar as varreduras em grupos maiores de
-arquivos aplicando um pouco de \textit{shell script}. Os resultados das
-varreduras serão armazenados em arquivos de texto que irão conter todos os
-atributos analisados a cada arquivo a respeito de uma determinada regra. Vamos
-explicar com um pouco mais de detalhe como ficam caracterizadas as infecções nos
-\textit{logs} de resultados, com casos de teste envolvendo expectativas de
-resultados positivos, falso-positivos e negativos. Ao final da seção de
-desenvolvimento, também será explicada a ideia da aplicação \textit{web} para
-varreduras remotas e manipulação de regras do Yara.
+AV em suas próprias varreduras em \textit{scripts} que as reconhecem,
+descomprimem e convertem para regras do Yara, que a partir de então podem ser
+editadas ou testadas isoladamente a critério do desenvolvedor.
